# cc-codex-config

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml
configs/warp/: README.md
docs/: related-projects.md
docs/operations/: README.md  claude-code.md  codex-cli.md  warp.md
scripts/: install.py
skills/ai-coding-config/: SKILL.md
skills/ai-coding-statusline/: SKILL.md
skills/ai-coding-statusline/agents/: openai.yaml
src/statusline_kit/: __init__.py  cli.py
tests/: test_statusline.py
