[project]
name = "kt-statusline"
version = "0.1.0"
description = "Status line kit for Claude Code and Codex CLI."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "kt-aicoding" }]

[project.scripts]
kt-statusline = "statusline_kit.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
